# llm-provider-update-feed

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: README.md  __init__.py  config.py  crud.py  db.py  main.py  models.py  schemas.py
app/collectors/: README.md  __init__.py  anthropic.py  aws.py  azure.py  base.py  gemini.py  openai.py
app/services/: README.md  collector_service.py
app/static/: README.md  app.js  styles.css
app/templates/: README.md  index.html
data/: updates.db
tests/: README.md  test_dedupe.py
