[project]
name = "llm-provider-update-feed"
version = "1.0.0"
description = "A feed service that tracks model lifecycle events across major LLM providers"
requires-python = ">=3.11"
dependencies = [
    # Core framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy>=2.0.0",
    # Settings / env
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # HTTP client (collectors)
    "httpx>=0.27.0",
    # HTML parsing (collectors)
    "beautifulsoup4>=4.12.0",
    # Server-rendered templates
    "jinja2>=3.1.0",
    # Structured logging
    "structlog>=24.4.0",
    # Static files support (FastAPI)
    "aiofiles>=23.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
